# ChangeLog for games-action/liero
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*liero-9999 (12 May 2012)

  12 May 2012; Michael Weber <xmw@gentoo.org> +liero-9999.ebuild,
  +metadata.xml:
  Initial import
