@@ -1,13 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-EBUILD liero-9999.ebuild 952 RMD160 7ccbabcda8437d1c924cdc308615a58ac89f06e5 SHA1 c68251b336eadd87654cfc03f16a284e1b72ee72 SHA256 25e5dfa73d325f48691921d7fd315c57179f8a8a137414c99cb86bd36db36afe
-MISC ChangeLog 247 RMD160 164b96f1f9b0c5c58501e43636c611a2f5fca324 SHA1 4b3639595961c421575fdbacd2ec8159c4ea2906 SHA256 bdbd6f0d0260bf97a5165ae8063b3a0b8ddd8b952f5a470fd69105930fac17dd
+DIST liero-1.35b2-bundle.zip 786233 RMD160 1dda2295791537bbec5adf4f70bc1c01318d120b SHA1 a324764122157d7b00b8e1ad4f6ce3abbe2192ce SHA256 e5dd8cb3ce6269e84e1716f86d552be0be4b3589c8552767912894fbcd1ee33a
+EBUILD liero-9999.ebuild 1385 RMD160 62e102b8fc51fe468adf5047831af61e3c78df56 SHA1 7be127ba59c95ea6b473bfec2622f5b3520e616e SHA256 e8e0cbed22a2bf841813455243706293326471b47df971a6cd9293016641ddb0
+MISC ChangeLog 344 RMD160 4426f438f54cbc156fb28bdc9c77ee132a41c787 SHA1 b693cc34a54ac8850e48c09f055fb585fad64c8b SHA256 40a044bc073418ac2e5de8640faff34e5cffc03337e31fa68e3fb13d77549592
 MISC metadata.xml 224 RMD160 2a7e22a99ec669c5b961c3d1738a0cda58264318 SHA1 f6fd81fac4df7d7995b1600848b265fceda692f8 SHA256 f810c6de744adceee241992d3f713142db3e7025986f6cc5898cfe3c9cb2f4a7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk+uXscACgkQknrdDGLu8JBKKwEAiUBPGpapCPQqk8NkzCx1T7K5
-v1a0bofe+JRKh43wVvMA/3joT4iySdmHt16Av+K593FsFKPc4IQ7smDuVQ8u/Ish
-=KMcY
+iF4EAREIAAYFAk+u+pgACgkQknrdDGLu8JDpLgD+IxXRk3Ye75qqMlUgRlUeNjNG
+JVeJPvr4oXdRnZQCmJkA/im5qPQPcZvtTKy15Sjea2Zypx/xLJygGqK89y9NFj0o
+=yynK
 -----END PGP SIGNATURE-----
