@@ -2,6 +2,9 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 May 2012; Michael Weber <xmw@gentoo.org> liero-9999.ebuild:
+  Add needed games data files.
+
 *liero-9999 (12 May 2012)
 
   12 May 2012; Michael Weber <xmw@gentoo.org> +liero-9999.ebuild,
